# MagicFixup

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  environment.yaml  magicfu_gradio.py  main.py  run_magicfu.py  setup.py  train.sh
UI/: .gitignore  README.md  app.py  pyproject.toml
configs/: collage_composite_train.yaml  collage_flow_train.yaml  collage_mix_train.yaml
data_processing/: moments_dataset.py  moments_processing.py  processing_utils.py
examples/: log.csv
ldm/: lr_scheduler.py  util.py
ldm/data/: collage_dataset.py
ldm/models/: autoencoder.py
ldm/models/diffusion/: classifier.py  ddim.py  ddpm.py  plms.py
ldm/modules/: attention.py  ema.py  x_transformer.py
ldm/modules/diffusionmodules/: model.py  openaimodel.py  util.py
ldm/modules/distributions/: distributions.py
ldm/modules/encoders/: modules.py  xf.py
ldm/modules/losses/: contperceptual.py  vqperceptual.py
scripts/: combine_model_params.py  inference.py  modify_checkpoints.py
